<resources>
    <string name="app_name">Trunkmon</string>
    <string name="action_content">Content</string>
    <string name="action_violations">Violations</string>
    <string name="action_thresholds">Thresholds</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="title_activity_selections">SelectionsActivity</string>
    <string name="title_activity_violations_filter">ViolationsFilterActivity</string>
    <string name="title_activity_violations_data">ViolationsDataActivity</string>
    <string name="title_activity_thresholds_filter">ThresholdsFilterActivity</string>
    <string name="title_activity_thresholds_data">ThresholdsDataActivity</string>
    <string name="title_activity_splashscreen">splashscreen</string>
    <string name="title_activity_threshold_edit">ThresholdEditActivity</string>
</resources>
